Front & back Beta Dev

--- a/FullStack.Services.Web/appsettings.json
+++ b/FullStack.Services.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "StudentApiBase": "https://localhost:7022",
+    "AuthApiBase": "https://localhost:7023"
+  }
 }
